Forgot to implement ShadedClassLoader.FIND_RESOURCES_RETURN_DIRECT